This file documents the revision history for the Monitoring Webinterface Thruk.

1.52     not yet released
          - added cookie based authentication and logout button
          - updated calendar popup
            - use mousewheel to change date / time
          - Bug Fixes
            - fixed scrolling to top on clicking calendar icon

1.50     Thu Sep 27 09:21:20 CEST 2012
          - make menu sections foldable
          - Bug Fixes
            - fixed reload in IE
            - fixed minemap header in IE

1.48     Fri Sep 21 11:24:48 CEST 2012
          - save scroll state on sending commands and reloads
          - reports
            - added basic report option validation
          - Bug Fixes
            - fixed state hosts (Oliver Falk)
            - fixed search with ipad
            - fixed action icons by custom vars servicegroup overview

1.46     Tue Sep  4 15:42:15 CEST 2012
          - optional favicon problem counter
          - display action/notes url on host/servicegroup pages
          - minemap:
            - dynamic column header height
          - panorama view:
            - optional auto hiding panel header
          - Bug Fixes
            - fixed using multiple groups in cgi.cfg
            - fixed search with iphone

1.44     Mon Aug 27 15:17:31 CEST 2012
          - play sounds only for unhandled problems
          - Bug Fixes
            - fixed adding report with empty crontab
            - fixed looping startup.html
            - fixed taint mode error on debian

1.42     Thu Aug 23 17:55:54 CEST 2012
          - panorama view:
            - added host details panlet
            - link service details to service list
            - show messages from send commands
            - add possibility to remove downtimes
            - show server time and login
            - update to extjs 4.1.1
          - Bug Fixes
            - fixed authentication in recurring downtimes

1.40     Fri Aug  3 16:54:16 CEST 2012