@@ -9239,8 +9239,8 @@ allowed_frame_links = https://wiki.my-company.com</tt></pre>
 <div class="paragraph"><p>Set initial menu state.</p></div>
 <div class="literalblock">
 <div class="content">
-<pre><tt>0 = closed
-1 = open</tt></pre>
+<pre><tt>closed  =&gt; 0
+open    =&gt; 1</tt></pre>
 </div></div>
 <div class="paragraph"><p>ex.:</p></div>
 <div class="literalblock">
@@ -9753,6 +9753,22 @@ peer config.</p></div>
 <div class="literalblock">
 <div class="content">
 <pre><tt>resource_file = /etc/nagios3/resource.cfg</tt></pre>
+</div></div>
+<h4 id="_perf_bar_mode">perf_bar_mode</h4>
+<div class="paragraph"><p>This option enables a performance bar inside the status/host list which
+create a graph from the performance data of the plugin output. Available
+options are <em>first</em>, <em>all</em>, <em>worst</em> and <em>off</em>.</p></div>
+<div class="literalblock">
+<div class="content">
+<pre><tt>all: graph all performance values available
+first: graph only the first performance value
+worst: graph only the graph for the worst state
+off: graph no value at all</tt></pre>
+</div></div>
+<div class="paragraph"><p>ex.:</p></div>
+<div class="literalblock">
+<div class="content">
+<pre><tt>perf_bar_mode = first</tt></pre>
 </div></div>
 <h4 id="_shown_inline_pnp">shown_inline_pnp</h4>
 <div class="paragraph"><p>Show inline pnp graph if available. If a service or host has a
@@ -10690,7 +10706,7 @@ of your monitoring core configuration.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2012-10-05 12:16:34 CEST
+Last updated 2012-10-05 16:58:28 CEST
 </div>
 </div>
 </body>
