@@ -6,6 +6,7 @@
   var theme                  = '[% theme %]';
   var has_expire_acks        = [% IF has_expire_acks %]true[% ELSE %]false[% END %];
   var fav_counter            = [% IF fav_counter +%]true[% ELSE %]false[% END %];
+  var perf_bar_mode          = '[% perf_bar_mode %]';
 -->
 </script>
 [%+ UNLESS thruk_debug %]
