@@ -1,6 +1,7 @@
-﻿[% PROCESS _header.tt %]
-[% USE date %]
+﻿[% USE date %]
+[% PROCESS _header.tt %]
 [% PROCESS _message.tt %]
+[% PROCESS custom_perf_bar_adjustments.tt %]
 
 [% SET peer_key      = host.peer_key %]
 [% SET program_start = pi_detail.$peer_key.program_start %]
@@ -166,7 +167,10 @@
                           </tr>
                           <tr>
                             <td class='dataVar' valign='top'>Performance Data:</td>
-                            <td class='dataVal'>[% host.perf_data %]</td>
+                            <td class='dataVal'>
+                                [% PROCESS _perfdata_table.tt write="true" state=host.state perfdata=host.perf_data check_command=host.check_command %]
+                                [% host.perf_data %]
+                            </td>
                           </tr>
                           <tr>
                             <td class='dataVar'>Current Attempt:</td>
