@@ -224,6 +224,11 @@ show_full_commandline = 1
 #
 #resource_file = path_to_your/resource.cfg
 
+# enable a performance bar inside the status/host list which
+# create a graph from the performance data of the plugin output. Available
+# options are 'first', 'all', 'worst' and 'off'.
+perf_bar_mode = first
+
 # show inline pnp graph if available
 # if a service or host has a pnp4nagios action url set
 # thruk will show a inline graph on the extinfo page
